--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
+@import url("reset.css");
+
 *{
 	box-sizing: border-box;
 
 }
 
+@media screen and (max-width: 980px) {
 body{
 	background-image: url("spiration-light.png");
 	font-size:10px;
@@ -10,6 +13,7 @@ body{
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color:#777;
 
+	}
 }
 
 img{
@@ -108,11 +112,11 @@ nav a:first-child {
 	border-left: 0 none;
 }
 
+@media screen and (max-width: 768px) {
 #main-container{
 	padding-top:20px;
 	background-color: #d9dbdd;
-
-
+	}
 }
 
 .main-section{
@@ -165,6 +169,7 @@ h3, .sidebar, h2{
 	margin-bottom: 0;
 }
 
+@media screen and (max-width: 640px) {
 footer{
 	background: #666666;
 	color: #fff;
@@ -175,7 +180,7 @@ footer{
 	font-size:12px;
 	text-align: center;
 	margin-bottom: 50px;
-
+	}
 }
 
 .work{
